# SportsPose

./: .gitignore  README.md  bib.txt  download.html  example_notebook.ipynb  index.html  pyproject.toml  setup.cfg  setup_mac.cfg  todo.txt
ConsistencyLoss/motionbertH36m/: README.md  prepare_data.py  requirements.txt  train.py
ConsistencyLoss/motionbertH36m/configs/pose3d/: paperh36m.yaml  paperskipose.yaml
ConsistencyLoss/motionbertH36m/lib/data/: datareader_h36m.py  dataset_motion_3d.py
ConsistencyLoss/motionbertH36m/lib/model/: loss.py  loss_utils.py
ConsistencyLoss/motionbertH36m/lib/utils/: basis_transforms.py  utils_data.py
src/sportspose/: camera.py  dataset.py  plot_skeleton_3d.py  utils.py
src/sportspose/utils/: datautils.py  extract_frames.py  get_sportspose_2d.py
