[metadata]
description = "A Package for working with SportsPose"
long_description = file:README.md
long_description_content_type = text/markdown
author = Christian Ingwersen
author_email = cin@trackman.com
license=MIT
name = sportspose
version = 0.0.1

[options]
package_dir=
    = src
packages = find_namespace:
python_requires= >=3.8
install_requires =
    torch
    decord
    numpy
    opencv-contrib-python
    Pillow
    matplotlib
  
[options.extras_require]
build = 
    build
test =
    pylint
    pytest-sugar
    pytest-cov

[options.packages.find]
where = src